[gd_scene load_steps=7 format=2]

[ext_resource path="res://scene/InfoBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/GameGrid.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/GameOver.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/GameScrn.gd" type="Script" id=4]
[ext_resource path="res://asset/slow_melancholic_theme_c64_style.ogg" type="AudioStream" id=5]
[ext_resource path="res://class/AudioEventPlayer.gd" type="Script" id=6]

[node name="GameScrn" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="InfoBar" parent="." instance=ExtResource( 1 )]

[node name="GameGrid" parent="." instance=ExtResource( 2 )]

[node name="Audio" type="Node" parent="."]
script = ExtResource( 6 )
initial_stream = ExtResource( 5 )
supported_streams = 3

[node name="GameOver" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CheatInputTimeout" type="Timer" parent="."]
one_shot = true

[connection signal="game_over" from="GameGrid" to="." method="_on_GameGrid_game_over"]
[connection signal="message_change_request" from="GameGrid" to="." method="_on_GameGrid_message_change_request"]
[connection signal="music_change_request" from="GameGrid" to="." method="_on_GameGrid_music_change_request"]
[connection signal="leave" from="GameOver" to="." method="_on_GameOver_leave"]
[connection signal="retry" from="GameOver" to="." method="_on_GameOver_retry"]
[connection signal="timeout" from="CheatInputTimeout" to="." method="_on_CheatInputTimeout_timeout"]
